--- a/telegram/config/services.yaml
+++ b/telegram/config/services.yaml
@@ -20,5 +20,6 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Application\Command\TelegramStart: ~
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
