--- a/telegram/config/services.yaml
+++ b/telegram/config/services.yaml
@@ -23,3 +23,9 @@ services:
     App\Application\Command\TelegramStart: ~
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Symfony\Component\Serializer\Normalizer\ArrayDenormalizer:
+        tags:
+            - { name: 'serializer.normalizer'}
+
+    App\Application\Service\:
+        resource: '../src/Application/Service'
