--- a/telegram/.env
+++ b/telegram/.env
@@ -1,4 +1,3 @@
 APP_ENV=dev
 APP_SECRET=edb65d342ceab4deacb444ffa11f2f98
-
-//  docker exec -it php bash
+TOKEN=6409552485:AAF1sTyMBiIi47qZFn3Xm826zlAUGo1iTf8
