--- a/telegram/.env
+++ b/telegram/.env
@@ -1,3 +1,13 @@
 APP_ENV=dev
 APP_SECRET=edb65d342ceab4deacb444ffa11f2f98
 TOKEN=6409552485:AAF1sTyMBiIi47qZFn3Xm826zlAUGo1iTf8
+ADMIN_ID=1374675059
+BOT_TOKEN=6753324315:AAE6KrNTe_0ONQj2Gf-Wve_7XCG9dQOCFUo
+WEB_HOOK=https://webhook.site/c2e3e9ab-bdf0-4cb4-bcc3-248606494ee0/
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
