--- a/telegram/composer.json
+++ b/telegram/composer.json
@@ -12,11 +12,14 @@
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/messenger": "6.3.*",
         "symfony/property-access": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/serializer": "6.3.*",
+        "symfony/twig-bundle": "6.3.*",
         "symfony/yaml": "6.3.*",
-        "telegram-bot-php/core": "^1.0"
+        "telegram-bot-php/core": "^1.0",
+        "twig/twig": "^2.0"
     },
     "config": {
         "allow-plugins": {
