--- a/telegram/composer.json
+++ b/telegram/composer.json
@@ -8,6 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-pcntl": "*",
+        "predis/predis": "^2.2",
+        "snc/redis-bundle": "^4.6",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
