--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,13 @@ services:
     # настройка Xdebug
     environment:
       - PHP_IDE_CONFIG=serverName=php
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+volumes:
+  redis-data: {}
