--- a/telegram/.env
+++ b/telegram/.env
@@ -11,3 +11,8 @@ WEB_HOOK=https://webhook.site/c2e3e9ab-bdf0-4cb4-bcc3-248606494ee0/
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis
+###< snc/redis-bundle ###
