--- a/telegram/.env
+++ b/telegram/.env
@@ -1,4 +1,4 @@
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=edb65d342ceab4deacb444ffa11f2f98
 TOKEN=6409552485:AAF1sTyMBiIi47qZFn3Xm826zlAUGo1iTf8
 ADMIN_ID=1374675059
