--- a/deployment/docker/dev/conf/telegram.conf
+++ b/deployment/docker/dev/conf/telegram.conf
@@ -2,7 +2,7 @@ server {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     index index.php index.html;
-    server_name localhost;
+    server_name localhost 80.78.255.51;
     listen 3000;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
